# gdelta_zstd

./: .gitignore  README.md
Gdelta/: CMakeLists.txt  FileOperator.h  benchmark.cpp  compress.cpp  compress.h  main.cpp  zstdsrc.cpp  zstdsrc.h
Gdelta/educational_decoder/: zstd_decompress.c  zstd_decompress.h
Gdelta/zstd-dev/: CMakeLists.txt  test.c  testzstd.c  testzstd.h
Gdelta/zstd-dev/examples/: simple_compression.c
Gdelta/zstd-dev/lib/: zstd.h
Gdelta/zstd-dev/lib/common/: zstd_internal.h
Gdelta/zstd-dev/lib/compress/: hist.c  zstd_compress.c  zstd_compress_sequences.c  zstd_lazy.c
